fix: Break words to prevent overflow.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,6 +54,7 @@ body {
     color: var(--prose-color);
     background-color: var(--background-color);
     line-height: 1.5;
+    word-wrap: break-word;
 }
 
 img,
